test/classes/initializers/generics/phase1/accessThisBad.good
accessThisBad.chpl:4: In initializer:
accessThisBad.chpl:5: error: cannot pass "this" to a function in phase 1 of initialization
